--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+<iframe
+    id="youtube-player"
+    src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1"
+    frameborder="0">
+</iframe>
