--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@
     src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1"
     frameborder="0">
 </iframe>
+
+<script> !function (t, e, c, n) { var s = e.createElement(c); s.async = 1, s.src = 'https://scripts.claspo.tech/scripts/' + n + '.js'; var r = e.scripts[0]; r.parentNode.insertBefore(s, r); var f = function () { f.c(arguments); }; f.q = []; f.c = function () { f.q.push(arguments); }; t['claspo'] = t['claspo'] || f; }(window, document, 'script', '3D33758FB997477A999B8071945D8321'); </script><script>claspo('init');</script>
