--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     frameborder="0">
 </iframe>
 
-<script>
+<!-- <script>
     !function (t, e, c, n) {
         var s = e.createElement(c);
         s.async = 1, s.src = 'https://scripts.claspo.io/scripts/' + n + '.js';
@@ -19,4 +19,21 @@
         };
         t['claspo'] = t['claspo'] || f;
     }(window, document, 'script', '96B8FFDAE4554098832FE09565558812');
+</script><script>claspo('init');</script> -->
+
+<script>
+    !function (t, e, c, n) {
+        var s = e.createElement(c);
+        s.async = 1, s.src = 'https://scripts.claspo.tech/scripts/' + n + '.js';
+        var r = e.scripts[0];
+        r.parentNode.insertBefore(s, r);
+        var f = function () {
+            f.c(arguments);
+        };
+        f.q = [];
+        f.c = function () {
+            f.q.push(arguments);
+        };
+        t['claspo'] = t['claspo'] || f;
+    }(window, document, 'script', 'FD937086838848AFAFD14C22880371B2');
 </script><script>claspo('init');</script>
